--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ h1 {
 .leftbar {
   position: absolute;
   width: 80%;
-  height: 600px;
+  height: 100%;
   background-color: #2c3e50;
   box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.5);
   left: -102%;
